# tree-sitter-apache-dispatcher-config

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib
.github/workflows/: main.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: dispatcher.any
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: aem-project-archetype-46.txt  function.txt  property.txt  structure.txt
test/highlight/: function.any  property.any  string.any
